fix(richtext-lexical): button margins too large

--- a/packages/richtext-lexical/src/field/features/Relationship/nodes/components/index.scss
+++ b/packages/richtext-lexical/src/field/features/Relationship/nodes/components/index.scss
@@ -59,10 +59,8 @@
     }
   }
 
-  &__swapButton {
+  &__swapButton.btn {
     margin: 0;
-    margin-top: 0!important;
-    margin-bottom: 0!important;
   }
 
   &__doc-drawer-toggler,
